--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,18 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+main {
+  width: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+main p {
+  text-align: center;
 }
