final touches css

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   min-height: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 main {
@@ -18,7 +19,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 main p {
